--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -4,6 +4,7 @@
 .root {
     display: flex;
     justify-content: space-between;
+    margin: 2rem;
 
     @media screen and (max-width: 768px) {
         display: flex;
