fix: UI on xm screens

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -3,6 +3,11 @@
   justify-content: space-between;
   margin: 2rem;
 }
+@media screen and (max-width: 320px) {
+  .root {
+    margin: 2rem 0.5rem;
+  }
+}
 @media screen and (max-width: 768px) {
   .root {
     display: flex;
